--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node  server/index.js",
     "dev": "nodemon  server/index.js",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm ci && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
