--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": "^16.15.1"
   },
   "dependencies": {
+    "csv": "^6.2.10",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
