--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon  server/index.js",
     "build": "cd client && npm ci && npm run build",
     "commandUpdate": "node server/src/discord/deploy-commands.js",
+    "excelUpdate": "node server/src/googleSheet/updateSheet.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +18,7 @@
     "node": "^16.15.1"
   },
   "dependencies": {
-    "csv": "^6.2.10",
+    "csv-parser": "^3.0.0",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
